--- a/web3d/index.html
+++ b/web3d/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <p id="mydescription" class="hide" style="font-size: 0.8em;"><span style="font-weight: bold;">Click</span> on items to navigate. <span style="font-weight: bold;">Double click</span> to open the item links. 2013. Yi Ning Huang.</p>
             </div>
-            <div id="mytab"></div>
+            <div id="mytab" class="hide"></div>
         </nav>
 
         <div id="myloading">
