--- a/web3d/index.html
+++ b/web3d/index.html
@@ -121,7 +121,7 @@
                 des.classList.remove('hide');
                 web3d.classList.add('hide');
                 logo.classList.remove('hide');
-                tab.classList.remove('add');
+                tab.classList.remove('hide');
                 $('#mymain-container').html('');
                 scripts = []; links = []; divs = []; imgs = []; atages = []; uls = []; articles = []; headers = [];
                 objects = []; ulObjects = []; artObjects = []; headerObjects = [];
