--- a/web3d/index.html
+++ b/web3d/index.html
@@ -19,39 +19,39 @@
             three.js code adopted from Mr. doob's CSS3D examples.
             2013 Oct.
         -->
-        <nav id="mynav" class="expand">
-            <div id="myform" class="expand">
-                <div id="myInputs" class="fullStyle">
-                    <div id="perspective">
+        <nav id="yiningNav" class="yiningExpands">
+            <div id="yiningForm" class="yiningExpands">
+                <div id="yiningInputs" class="yiningFullStyle">
+                    <div id="yiningPerspective">
                         <img src="img/web3d-2.png" id="web3d" alt="web3d"/>
                     </div>
-                    <div id="mylogo" class="hide"></div>
+                    <div id="yiningLogo" class="yiningHides"></div>
                     <input id="siteInput" type="text" onclick="this.value='';" value="twitter.com"  style="color: #fff;" onfocus="this.value=''; this.style.color='#fff';" onblur="if(this.value == '') { this.value = 'enter valid root address'; this.style.color='#0089a2'; }" contenteditable></input>
-                    <div id="mybtn" style="line-height: 44px !important; font-size: 16px !important;">GO</div>
-                    <div id="myInfo">
+                    <div id="yiningBtn" style="line-height: 44px !important; font-size: 16px !important;">GO</div>
+                    <div id="yiningInfo">
                         <p><span style="font-weight: bold;">1. Enter</span> a valid root address.<br/>
                             <span style="font-weight: bold;">2. Click</span> on items to navigate.<br/><span span style="font-weight: bold;">3. Double click</span> to open the item links.<br/>
 
                         <span style="font-size: 0.9em">
                             works with most of static websites. Roots only.
                             Build with <a href="http://threejs.org/" target="_blank" style="text-decoration:underline; color:#0089a2">three.js</a> and <a href="http://whateverorigin.org/" target="_blank" style="text-decoration:underline; color:#0089a2">whateverorigin.org.</a>
-
                             <span style="font-weight: bold;"> web3d</span> is a project created for Jamie Kosoy's Web 3 class at Parsons The New School For Design.
                             2013. Yi Ning Huang. hsnu20054@gmail.com</p>
                         </span>
                     </div>
                 </div>
-                <p id="mydescription" class="hide" style="font-size: 0.8em;"><span style="font-weight: bold;">Click</span> on items to navigate. <span style="font-weight: bold;">Double click</span> to open the item links. 2013. Yi Ning Huang.</p>
+                <p id="yiningDescription" class="yiningHides" style="font-size: 0.8em;"><span style="font-weight: bold;">Click</span> on items to navigate. <span style="font-weight: bold;">Double click</span> to open the item links. 2013. Yi Ning Huang.
+                </p>
             </div>
-            <div id="mytab" class="hide"></div>
+            <div id="yiningTab" class="yiningHides"></div>
         </nav>
 
-        <div id="myloading">
-            <div id="myloader"></div>
-            <p class="error-msg">note: make sure to input a valid address</p>
+        <div id="yiningLoading">
+            <div id="yiningLoader"></div>
+            <p class="yiningError-msg">note: make sure to input a valid address</p>
         </div>
 
-        <div id="mymain-container"></div>
+        <div id="yiningMainContainer"></div>
 
         <script src="js/jquery-1.10.2.min.js"></script>
         <script src="js/three.min.js"></script>
@@ -60,19 +60,19 @@
 
     	<script type="text/javascript"> 
             var scripts, links, divs, imgs, atages, uls, articles, headers, forms;
-            var container = document.getElementById('mymain-container');
+            var container = document.getElementById('yiningMainContainer');
             var siteLink = 'http://twitter.com';
             var clicked = false;
-            var tab = document.getElementById('mytab');
-            var nav = document.getElementById('mynav');
-            var btn = document.getElementById('mybtn');
+            var tab = document.getElementById('yiningTab');
+            var nav = document.getElementById('yiningNav');
+            var btn = document.getElementById('yiningBtn');
             var input = document.getElementById('siteInput');
-            var loading = document.getElementById('myloading');
-            var form = document.getElementById('myform');
-            var logo = document.getElementById('mylogo');
-            var myInputs = document.getElementById('myInputs');
-            var info = document.getElementById('myInfo');
-            var des = document.getElementById('mydescription');
+            var loading = document.getElementById('yiningLoading');
+            var form = document.getElementById('yiningForm');
+            var logo = document.getElementById('yiningLogo');
+            var myInputs = document.getElementById('yiningInputs');
+            var info = document.getElementById('yiningInfo');
+            var des = document.getElementById('yiningDescription');
             var web3d = document.getElementById('web3d');
             var rotateBox = document.getElementById('rotateBox');
             var mouseX, mouseY;
@@ -93,7 +93,7 @@
             tab.addEventListener('click', function(evt){
                 evt.preventDefault();
                 evt.stopPropagation();
-                nav.classList.toggle('sliding');
+                nav.classList.toggle('yiningSliding');
             }, false);
 
             input.addEventListener('keydown', function(evt){
@@ -109,36 +109,37 @@
             logo.addEventListener('click', function(evt){ //display landing page
                 evt.preventDefault();
                 evt.stopPropagation();
-                form.classList.remove('collapsed','myshadow');
-                form.classList.add('expand');
-                nav.classList.remove('collapsed');
-                nav.classList.add('expand');
-                myInputs.classList.remove('barStyle');
-                myInputs.classList.add('fullStyle');
-                info.classList.remove('hide');
-                des.classList.add('hide');
-                web3d.classList.remove('hide');
-                logo.classList.add('hide');
-                tab.classList.add('hide');
+                form.classList.remove('yiningCollapsed','yiningShadow');
+                form.classList.add('yiningExpands');
+                nav.classList.remove('yiningCollapsed');
+                nav.classList.add('yiningExpands');
+                myInputs.classList.remove('yiningBarStyle');
+                myInputs.classList.add('yiningFullStyle');
+                info.classList.remove('yiningHides');
+                des.classList.add('yiningHides');
+                web3d.classList.remove('yiningHides');
+                logo.classList.add('yiningHides');
+                tab.classList.add('yiningHides');
             }, false);
 
             function reload(evt){
                 evt.preventDefault();
                 evt.stopPropagation();
                 siteLink = input.value;
-                nav.classList.remove('expand');
-                nav.classList.add('collapsed');
-                form.classList.remove('collapsed');
-                form.classList.add('expand','myshadow');
+                nav.classList.remove('yiningExpands');
+                nav.classList.add('yiningCollapsed');
+                form.classList.remove('yiningExpands');
+                form.classList.add('yiningCollapsed');
+                form.classList.add('yiningShadow');
                 form.style.background = '#00bddf';
-                myInputs.classList.add('barStyle');
-                myInputs.classList.remove('fullStyle');
-                info.classList.add('hide');
-                des.classList.remove('hide');
-                web3d.classList.add('hide');
-                logo.classList.remove('hide');
-                tab.classList.remove('hide');
-                $('#mymain-container').html('');
+                myInputs.classList.add('yiningBarStyle');
+                myInputs.classList.remove('yiningFullStyle');
+                info.classList.add('yiningHides');
+                des.classList.remove('yiningHides');
+                web3d.classList.add('yiningHides');
+                logo.classList.remove('yiningHides');
+                tab.classList.remove('yiningHides');
+                $('#yiningMainContainer').html('');
                 scripts = []; links = []; divs = []; imgs = []; atages = []; uls = []; articles = []; headers = [];
                 objects = []; ulObjects = []; artObjects = []; headerObjects = [];
                 init(siteLink);
@@ -209,7 +210,7 @@
                                             url = siteLink + url;
                                             links[i].setAttribute('href',url);
                                         }
-                                        $('#mymain-container').append(links[i]);
+                                        $('#yiningMainContainer').append(links[i]);
                                     }
                                 }
                             }
@@ -596,6 +597,5 @@
             }
     	</script>
     </body>
-    <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </html>
 		
